# minisong

./: .gitignore  CHANGELOG.adoc  Cargo.toml  LICENSE  README.adoc  flake.nix  rustfmt.toml  taplo.toml
.github/workflows/: rust.yml
src/: app.rs  bar.rs  components.rs  current_song.rs  main.rs  mpd.rs  playback.rs  status.rs  task.rs
src/app/: client.rs  connect_to_mpd.rs  help.rs  mod.rs
src/mpd/: mod.rs
src/ui/: block.rs  image.rs  input.rs  label.rs  mod.rs  throbber.rs  widget.rs
