[package]
name        = "minisong"
version     = "0.1.0"
edition     = "2021"
description = "Tiny MPD client for the terminal"
license     = "MIT"
repository  = "https://github.com/barsoosayque/minisong"
homepage    = "https://github.com/barsoosayque/minisong"
readme      = "README.adoc"
keywords    = ["audio", "client", "mpd", "music", "terminal"]
authors     = ["barsoosayque <shtoshich@gmail.com>"]

[dependencies]
chrono             = "0.4.42"
clap               = { version = "4.5.48", features = ["derive"] }
color-eyre         = "0.6.5"
coro-router        = { git = "https://github.com/Blushyes/coro-router.git" }
eyre               = "0.6.12"
image              = "0.25"
iocraft            = "0.7.13"
mpd                = "0.1.0"
smol               = "2.0.2"
strum              = "0.27.2"
tracing            = "0.1.41"
tracing-error      = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[patch.crates-io]
iocraft = { git = "https://github.com/barsoosayque/iocraft", branch = "use-rect" }
